--- a/index2901.html
+++ b/index2901.html
@@ -1,1 +1,54 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div id="box_login">
+        <h1>Log in:</h1>
+        <form id="form_login">
+            <input type="text" placeholder="seu nome">
+            <input type="text" placeholder="seu email">
+    <div id="moradia">
+        <p>qual o pais</p>
+    </div>
+        </form>
+
+        <p>Qual a marca do seu carro?</p>
+        <!--  <input type="checkbox">
+         pode ticar varias opções 
+        qual ou quais voce gosta ctrl+shift+a
+                --> <input type="radio" id="vw" name="marca">
+        <!-- uma opção -->
+        <label for="vw">VW</label>
+        <input type="radio" id="ford" name="marca">
+        <label for="ford">Ford</label>
+        <p>Qual o ano de fabricação do seu carro?</p>
+        <input type="radio" id="vw" name="ano">
+           <label for="vw">2000</label>
+        <input type="radio" id="ford" name="ano">
+        <label for="ford">1990</label>
+        <p>Qual a sua linguagem favorita?</p>
+        <input type="checkbox" id="language" name="lang">
+           <label for="vw">Javascript</label>
+        <input type="checkbox" id="language" name="lang">
+        <label for="ford">C</label>
+
+        <p>por onde encontrou esse curso?</p>
+        <select>
+            <option value="google">Google</option>
+            <option value="facebook">Facebook</option>
+            <option value="instagram">Instagram</option>
+            
+        </select>
+        <script>
+            console.log('ola')
+            const button2 = documento.getElementById('btn2)
+            
+        </script>
+    </div>
+</body>
+</html>
